added autocomplete classes(but not tested)

--- a/pcb/pcb.csproj
+++ b/pcb/pcb.csproj
@@ -39,6 +39,10 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -66,6 +70,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\autocomplete\AutocompleteParseException.cs" />
+    <Compile Include="core\autocomplete\TreeNode.cs" />
+    <Compile Include="core\autocomplete\Tree.cs" />
+    <Compile Include="core\autocomplete\Value.cs" />
     <Compile Include="core\chain\AbstractCBChain.cs" />
     <Compile Include="core\chain\BoxCbChain.cs" />
     <Compile Include="core\chain\StraightCbChain.cs" />
@@ -101,6 +109,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
