--- a/pcb/packages.config
+++ b/pcb/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.3" targetFramework="net40" />
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="1.28.3" targetFramework="net40" developmentDependency="true" />
   <package id="IronPython" version="2.7.5" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net40" />
