fixed ooc generation bug. moved some class to a seperate file

--- a/pcb/pcb.csproj
+++ b/pcb/pcb.csproj
@@ -167,16 +167,16 @@
     <Compile Include="core\autocomplete\TreeNode.cs" />
     <Compile Include="core\autocomplete\Tree.cs" />
     <Compile Include="core\autocomplete\Value.cs" />
-    <Compile Include="core\chain\AbstractCBChain.cs" />
-    <Compile Include="core\chain\BoxCbChain.cs" />
-    <Compile Include="core\chain\StraightCbChain.cs" />
-    <Compile Include="core\CommandBlock.cs" />
+    <Compile Include="core\ooc\chain\AbstractCBChain.cs" />
+    <Compile Include="core\ooc\chain\BoxCbChain.cs" />
+    <Compile Include="core\ooc\chain\StraightCbChain.cs" />
+    <Compile Include="core\ooc\CommandBlock.cs" />
     <Compile Include="core\LoadConfig.cs" />
-    <Compile Include="core\Marker.cs" />
-    <Compile Include="core\OOCMaker.cs" />
+    <Compile Include="core\ooc\Marker.cs" />
+    <Compile Include="core\ooc\OOCMaker.cs" />
     <Compile Include="core\PcbException.cs" />
-    <Compile Include="core\PcbParser.cs" />
-    <Compile Include="core\SingleOOC.cs" />
+    <Compile Include="core\ooc\PcbParser.cs" />
+    <Compile Include="core\ooc\SingleOOC.cs" />
     <Compile Include="core\util\CommandUtil.cs" />
     <Compile Include="core\util\CoorUtil.cs" />
     <Compile Include="core\util\Direction.cs" />
