--- a/pcb/pcb.csproj
+++ b/pcb/pcb.csproj
@@ -137,6 +137,9 @@
       <DependentUpon>UIresources.resx</DependentUpon>
     </Compile>
     <Compile Include="Snippet_menu.cs" />
+    <Compile Include="UUID.xaml.cs">
+      <DependentUpon>UUID.xaml</DependentUpon>
+    </Compile>
     <Page Include="add_ac_list.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -200,6 +203,10 @@
     <Page Include="Settings.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UUID.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
