--- a/pcb/pcb.csproj
+++ b/pcb/pcb.csproj
@@ -113,6 +113,9 @@
     </ApplicationDefinition>
     <Compile Include="add_ac_list.xaml.cs" />
     <Compile Include="autocomplete_menu_data.cs" />
+    <Compile Include="colorGenerator.xaml.cs">
+      <DependentUpon>colorGenerator.xaml</DependentUpon>
+    </Compile>
     <Compile Include="core\autocomplete\CompletionData.cs" />
     <Compile Include="NbtViewer.xaml.cs">
       <DependentUpon>NbtViewer.xaml</DependentUpon>
@@ -145,6 +148,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="autocomplete_menu.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="colorGenerator.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
